<resources>
    <string name="app_name">My Application</string>
    <string name="Année"></string>
    <string name="Classe"></string>
    <string name="TuteurEcole"></string>
    <string name="DateVisite"></string>
    <string name="MailTuteur"></string>
    <string name="Divers"></string>
    <string name="Entreprise"></string>
    <string name="TuteurEntreprise"></string>
    <string name="TéléphoneEntreprise"></string>
    <string name="MailEntreprise"></string>
    <string name="ConditionStage"></string>
    <string name="BilanTravaux"></string>
    <string name="RessourcesOutils"></string>
    <string name="Commentaires"></string>
    <string name="textViewNom">Nom</string>
</resources>