<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FicheVisite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="260dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Condition du stage" />

        <TextView
            android:id="@+id/SAI_ConditionStage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConditionStage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="310dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bilan des travaux réalisés" />

        <TextView
            android:id="@+id/SAI_BilanTravaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BilanTravaux" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ressource  et outils utilisés" />

        <TextView
            android:id="@+id/SAI_RessourcesOutils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RessourcesOutils" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Commentaires et appréciation générales" />

        <TextView
            android:id="@+id/SAI_Commentaires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="190dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuteur : " />

        <TextView
            android:id="@+id/SAI_TuteurEntreprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TuteurEntreprise" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="210dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Télépĥone : " />

        <TextView
            android:id="@+id/SAI_TéléphoneEntreprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TéléphoneEntreprise" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="230dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mail : " />

        <TextView
            android:id="@+id/SAI_MailEntreprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MailEntreprise" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Entreprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entreprise : " />

        <TextView
            android:id="@+id/SAI_Entreprise"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Entreprise" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="240dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Divers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Divers :" />

        <TextView
            android:id="@+id/SAI_Divers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Divers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Tuteur"
            android:layout_width="133dp"
            android:layout_height="17dp"
            android:text="Tuteur pédagogique : " />

        <TextView
            android:id="@+id/SAI_TuteurEcole"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/TuteurEcole" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="240dp"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/DateVisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date de la visite : " />

        <TextView
            android:id="@+id/SAI_DateVisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DateVisite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mail : " />

        <TextView
            android:id="@+id/SAI_MailTuteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MailTuteur" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/SISR"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:text="SISR" />

        <CheckBox
            android:id="@+id/SLAM"
            android:layout_width="70dp"
            android:layout_height="24dp"
            android:text="SLAM" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Classe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classe : " />

        <TextView
            android:id="@+id/SAI_Classe"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="@string/Classe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Année"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Année : " />

        <TextView
            android:id="@+id/SAI_Année"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/Année" />

    </LinearLayout>

    <TextView
        android:id="@+id/Fichedevisite"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:text="Fiche de visite"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/BoutonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="retour"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="628dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="participation du maitre de stage à l'épreuve orale"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="502dp" />

    <CheckBox
        android:id="@+id/ParticipationOui"
        android:layout_width="56dp"
        android:layout_height="23dp"
        android:text="Oui"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="528dp" />

    <CheckBox
        android:id="@+id/ParticipationNon"
        android:layout_width="64dp"
        android:layout_height="24dp"
        android:text="Non"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="531dp" />

</androidx.constraintlayout.widget.ConstraintLayout>