<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FicheVisite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="660dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Année"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Année : " />

        <TextView
            android:id="@+id/SAI_Année"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Année" />

    </LinearLayout>

    <TextView
        android:id="@+id/Fichedevisite"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="Fiche de visite élève"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="141dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="640dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Classe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classe : " />

        <TextView
            android:id="@+id/SAI_Classe"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/Classe" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="210dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="630dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/SISR"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:text="SISR" />

        <CheckBox
            android:id="@+id/SLAM"
            android:layout_width="70dp"
            android:layout_height="24dp"
            android:text="SLAM" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="590dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mail : " />

        <TextView
            android:id="@+id/SAI_MailTuteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MailTuteur" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="550dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/DateVisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date de la visite : " />

        <TextView
            android:id="@+id/SAI_DateVisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DateVisite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="610dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Tuteur"
            android:layout_width="133dp"
            android:layout_height="17dp"
            android:text="Tuteur pédagogique : " />

        <TextView
            android:id="@+id/SAI_TuteurEcole"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/TuteurEcole" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Divers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Divers :" />

        <TextView
            android:id="@+id/SAI_Divers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Divers" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonEnregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="30dp"
        android:text="Enregistrer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="30dp"
        android:layout_marginTop="240dp"
        android:text="retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>