<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bilan des travaux réalisés" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="380dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bilan des travaux réalisés" />

        <TextView
            android:id="@+id/SAI_BilanTravaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BilanTravaux" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ressource  et outils utilisés" />

        <TextView
            android:id="@+id/SAI_RessourcesOutils"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/RessourcesOutils" />
    </LinearLayout>

    <TextView
        android:id="@+id/SAI_BilanTravaux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BilanTravaux" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ressource  et outils utilisés" />

    <TextView
        android:id="@+id/SAI_RessourcesOutils"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/RessourcesOutils" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="230dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Commentaires et appréciation générales" />

        <TextView
            android:id="@+id/SAI_Commentaires"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:text="@string/Commentaires" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Commentaires et appréciation générales" />

    <TextView
        android:id="@+id/SAI_Commentaires"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:text="@string/Commentaires" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="97dp"
        android:text="participation du maitre de stage à l'épreuve orale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/participationOui"
        android:layout_width="56dp"
        android:layout_height="23dp"
        android:text="Oui" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="180dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/ParticipationOui"
            android:layout_width="56dp"
            android:layout_height="23dp"
            android:text="Oui" />

        <CheckBox
            android:id="@+id/ParticipationNon"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:text="Non" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>